--- a/About-Us.html
+++ b/About-Us.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>About Us</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
 <table>
     <thead>
         <tr>
@@ -29,3 +36,5 @@
         </tr>
     </tbody>
 </table>
+</body>
+</html>
