--- a/Pollution.html
+++ b/Pollution.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
 	<title>Pollution</title>
 	<link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class = "divv">
+	<div>
         <ol>
-            <li><a href="#Home.html"></i>Home</a></li>
-            <li><a href="About-Us.html"></i>About us</a></li>
-            <li><a href="#Air.html"></i>Air</a></li>
-            <li><a href="#Water.html"></i>Water</a></li>
-            <li><a href="#Soil.html"></i>Soil</a></li>
-            <li><a href="#Idustrial.html"></i>Idustrial</a></li>
+            <li><a target="_blank" href="Pollution.html"></i>Home</a></li>
+						<li><a target="_blank" href="About-Us.html"></i>About us</a></li>
+						<li><a target="_blank" href="Air.html"></i>Air</a></li>
+            <li><a target="_blank" href="Water.html"></i>Water</a></li>
+            <li><a target="_blank" href="Soil.html"></i>Soil</a></li>
+            <li><a target="_blank" href="Idustrial.html"></i>Idustrial</a></li>
         </ol>
+			</div>
  <div style = "margin-left:40%; padding:1px;height:1200px; font-size:50px">
 	 <h2>Pollution</h2>
 	 <img src = "C:\Users\Lenovo\Downloads\WhatsApp Image 2021-11-12 at 3.48.30 PM.jpeg" alt"Pollution"
